--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST='database endpoint'
+DB_HOST='database1.c1omu6qa2u1x.us-east-1.rds.amazonaws.com'
 DB_PORT=5432
-DB_DATABASE='db'
+DB_DATABASE='database1'
 DB_USER='postgres'
-DB_PASSWORD='password'
+DB_PASSWORD='inspiron'
