--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST='database1.c1omu6qa2u1x.us-east-1.rds.amazonaws.com'
+DB_HOST='mypostgresdb.c1omu6qa2u1x.us-east-1.rds.amazonaws.com'
 DB_PORT=5432
-DB_DATABASE='database1'
+DB_DATABASE='mypostgresdb'
 DB_USER='postgres'
 DB_PASSWORD='inspiron'
